<resources>
    <string name="app_name">馨阅读学生端</string>
    <string name="btn_login">登&#160;录</string>
    <string name="register">注&#160;册</string>
    <string name="forget">忘记密码?\</string>

    <string name="user_hint">请输入手机号</string>
    <string name="pass_hint">请输入密码</string>
    <string name="verify_hint">请输入验证码</string>
    <string name="get_verify">获取验证码</string>

    <string name="home">首页</string>
    <string name="my">我的</string>
    <string name="home_class">班级</string>
    <string name="course">课程详情</string>
    <string name="course_read">名师导读</string>

    <string name="search">搜索</string>
    <string name="search_book_hint">请输入要搜索的书籍</string>
    <string name="search_class">请输入班级ID</string>

    <string name="book_list">书单推荐</string>
    <string name="book_stack">书库</string>
    <string name="bookshop">书店</string>
    <string name="teacher_read">名师导读</string>
    <string name="introduce">内容简介</string>
    <string name="more">更多>></string>

    <string name="btn_game">闯关游戏</string>
    <string name="btn_notes">读书笔记</string>
    <string name="btn_mind_map">思维导图</string>
    <string name="btn_buy_book">购买此书</string>

    <string name="nothing">未知</string>
    <string name="my_books">我的书架</string>
    <string name="get_read">阅读成就</string>
    <string name="book_notes">读书笔记</string>
    <string name="rank">排行榜</string>
    <string name="my_set">设置</string>

    <string name="gameover">完成闯关</string>
    <string name="game_fail">闯关失败</string>
    <string name="next_game">完成闯关</string>
    <string name="again_game">重新闯关</string>

    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="sex">性别</string>
    <string name="school">学校</string>
    <string name="curr_class">班级</string>

    <string name="selete_y">选择年级</string>
    <string name="selete_class">选择班级</string>

    <string-array name="grade">
        <item>一年级</item>
        <item>二年级</item>
        <item>三年级</item>
        <item>四年级</item>
        <item>五年级</item>
        <item>六年级</item>
        <item>七年级</item>
        <item>八年级</item>
        <item>九年级</item>
    </string-array>
    <string-array name="myClass">
        <item>一班</item>
        <item>二班</item>
        <item>三班</item>
        <item>四班</item>
        <item>五班</item>
        <item>六班</item>
        <item>七班</item>
        <item>八班</item>
        <item>九班</item>
        <item>十班</item>
        <item>十一班</item>
        <item>十二班</item>
    </string-array>
    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>
</resources>
