<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/game_dialog_bg">


    <TextView
        android:id="@+id/tv_gameover_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/gameover"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_game_over"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_gameover_title"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/game_fail"
        android:textColor="#63c694"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/rl_game_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_game_over"
        android:layout_marginTop="20dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_game_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:text="正确率"
            android:textColor="#63c694"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/tv_game_right"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_game_curr_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="30%"
                android:textColor="#63c694" />

            <ProgressBar
                android:id="@+id/pb_game"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="140dp"
                android:layout_height="4dp"
                android:max="100"
                android:progress="30"
                android:progressDrawable="@drawable/progressbar" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_game_over"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_game_next"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_bg4"
            android:text="@string/next_game"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_game_new"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg4"
            android:text="@string/again_game"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>