<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/login_bg"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/phone" />

        <EditText
            android:id="@+id/et_username_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/user_hint"
            android:inputType="phone"
            android:maxLength="11"
            android:textColorHint="#e0e7e4" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="#e0e7e4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/password" />

        <EditText
            android:id="@+id/et_password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:hint="@string/pass_hint"
            android:maxLength="16"
            android:inputType="textPassword"
            android:textColorHint="#e0e7e4" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="#e0e7e4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/phone_code" />

        <EditText
            android:id="@+id/et_verify_reg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/verify_hint"
            android:singleLine="true"
            android:textColorHint="#e0e7e4" />

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/btn_bg1"
            android:padding="5dp"
            android:text="@string/get_verify"
            android:textColor="@color/white" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="5dp"
        android:background="#e0e7e4" />

    <Button
        android:id="@+id/btn_reg_forget"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_bg1"
        android:text="注册"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>