<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_teacher_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <!-- <ImageView
                 android:id="@+id/img_teacher_name"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:src="@drawable/name" />-->

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_teacher_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nothing"
                android:textColor="#333333"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <!--<ImageView
                android:id="@+id/img_teacher_sex"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/sex" />-->

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sex"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_teacher_sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nothing"
                android:textColor="#333333"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="#ccc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <!--<ImageView
                android:id="@+id/img_teacher_school"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/school" />-->

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/school"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_teacher_school"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nothing"
                android:textColor="#333333"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:background="#ccc" />

        <LinearLayout
            android:id="@+id/rl_student_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <!--<ImageView
                android:id="@+id/img_student_class"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/stu_class" />-->

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/curr_class"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_student_class"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nothing"
                android:textColor="#333333"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_mystudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:scrollbars="vertical"
        android:visibility="gone"></ListView>

</LinearLayout>